<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".DevActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userProfileImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/my_profile"
        android:contentDescription="@string/user_profile_picture"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/name_m_m_m_raisary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewRegistrationNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/registration_number_2022t01566"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewReleaseNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/release_number_0_1"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/back" />

</LinearLayout>